--- a/index.html
+++ b/index.html
@@ -13,26 +13,16 @@
     <body>
         <!-- HEADER -->
         <header>
-            <div class="container-header">
-                <div class="row nav">
-                    <div class="col-nav">
-                        <span class="white-circle">
-                            <a href="#shoes1">1</a>
-                        </span>
-                        <span class="white-circle">
-                            <a href="#shoes2">2</a>
-                        </span>
-                        <span class="white-circle">
-                            <a href="#shoes3">3</a>
-                        </span>
-                    </div>
-                </div>
-            </div>
+            <ul>
+                <li><a href="#shoes1">1</a></li>
+                <li><a href="#shoes2">2</a></li>
+                <li><a href="#shoes3">3</a></li>
+            </ul>
         </header>
         <!-- MAIN -->
         <main>
             <div id="shoes1" class="box red">
-                <div class="overlay">
+                <div class="row">
                     <div class="content">
                         <img src="./img/01.png" alt="">
                         <h2>Il nostro modello di punta</h2>
@@ -40,22 +30,18 @@
                 </div>
             </div>
             <div id="shoes2" class="box green">
-                <div class="overlay">
-                    <div class="overlay">
-                        <div class="content">
-                            <img src="./img/02.png" alt="">
-                            <h2>Il nostro modello di punta</h2>
-                        </div>
+                <div class="row">
+                    <div class="content">
+                        <img src="./img/02.png" alt="">
+                        <h2>Il nostro modello di punta</h2>
                     </div>
                 </div>
             </div>
             <div id="shoes3" class="box yellow">
-                <div class="overlay">
-                    <div class="overlay">
-                        <div class="content">
-                            <img src="./img/03.png" alt="">
-                            <h2>Il nostro modello di punta</h2>
-                        </div>
+                <div class="row">
+                    <div class="content">
+                        <img src="./img/03.png" alt="">
+                        <h2>Il nostro modello di punta</h2>
                     </div>
                 </div>
             </div>
